millora d'estil i nova funcionalitat a ReservaFeta

--- a/CAMPtina_Frontend/projecte-camptina/src/App.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/App.css
@@ -13,6 +13,7 @@
 
 .cn-main-navegacio {
   padding-top: 80px;
+  padding-bottom: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* WORKING */
@@ -268,11 +269,11 @@
   display: none;
 }
 
-.cn-header-navegacio > section > nav > ul > li > ul.cn-num-li-4-navegacio {
+.cn-header-navegacio > section > nav > ul > li > ul.cn-num-li-5-navegacio {
   position: absolute;
   top: 100%;
   width: 144px;
-  height: 272px;
+  height: 340px;
   display: none;
 }
 
