--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/css/Inici.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/css/Inici.css
@@ -4,8 +4,8 @@
     height: calc(100%*9/16);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-end;
     gap: 10px;
     padding: 10px;
     position: relative;
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 25%;
     height: 15%;
     border: 10px solid #369;
     border-radius: 8px;
@@ -142,7 +142,7 @@
     transform: scale(0.9);
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     .cn-video-a-inici > a {
         border-width: 5px;
         font-size: 0.8em;
